--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=08e35ff3e3d51c6e20b5bc3e9e3c4c33",
-    "/css/app.css": "/css/app.css?id=3f74ffb20cf6d7ce99e999c201991350"
+    "/js/app.js": "/js/app.js?id=94d98e6afb79f343a28c76e1a19d7cc6",
+    "/js/manifest.js": "/js/manifest.js?id=106c280ec50960820cb755735dbf1215",
+    "/css/app.css": "/css/app.css?id=3f74ffb20cf6d7ce99e999c201991350",
+    "/js/vendor.js": "/js/vendor.js?id=1a7377d4601113f6ca0b18e3f59ca36d"
 }
