--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
         "lodash": "^4.17.19",
         "postcss": "^8.4.12",
         "tailwindcss": "^3.0.23",
-        "vue-loader": "^16.8.3"
+        "vue-loader": "^16.8.3",
+        "webpack-livereload-plugin": "^1.2.0"
     },
     "dependencies": {
         "@inertiajs/inertia": "^0.11.0",
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/progress": "^0.2.7",
+        "browser-sync-webpack-plugin": "^2.3.0",
         "vue": "^3.2.31"
     }
 }
